# couchdb-file-sync

./: .gitignore  AGENTS.md  Cargo.toml  README.md  couchdb-file-sync.yaml.example  couchfs.yaml.example  deny.toml  docker-compose.yml  justfile
.github/workflows/: ci.yml  dependabot-auto-merge.yml  pr-notify-slack.yml  release.yml  test.yml
src/: config.rs  lib.rs  logging.rs  main.rs
src/cli/: commands.rs
src/couchdb/: db.rs  mod.rs
src/local/: db.rs  mod.rs  scanner.rs  watcher.rs
src/models/: change.rs  conflict.rs  file.rs  ignore.rs  mod.rs
src/slack/: mod.rs  notifier.rs
src/sync/: engine.rs  mod.rs
src/telegram/: mod.rs  notifier.rs
tests/: remote_move.rs
