[package]
name = "couchdb-file-sync"
version = "0.1.0"
edition = "2021"
description = "Filesystem-to-CouchDB sync engine with bidirectional sync and conflict detection"
authors = ["Nina Těšková <nina.marie.teskova@gmail.com>"]
license = "MIT"
repository = "https://gitea.hnrglobal.com/HNR-Global/couchdb-file-sync"

[[bin]]
name = "couchdb-file-sync"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-util = "0.7"

# CouchDB client
couch_rs = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
dialoguer = "0.12"

# Diff
similar = "2.6"

# Configuration
config = "0.15"

# File watching
notify-debouncer-full = "0.5"

# SQLite
rusqlite = { version = "0.38", features = ["bundled", "chrono", "serde_json"] }

# Hashing
sha2 = "0.10"
hex = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Pattern matching for ignore files
globset = "0.4"

# HTTP client for Telegram
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# MIME type detection
mime_guess = "2.0"

# Path utilities
walkdir = "2.5"

# Environment variable expansion
envy = "0.4"
shellexpand = "3.1"
rand = "0.10.0"

[dev-dependencies]
tempfile = "3.26"
tokio-test = "0.4"
