[package]
name = "couchdb-file-sync"
version = "0.3.0"
edition = "2024"
description = "Filesystem-to-CouchDB sync engine with bidirectional sync and conflict detection"
authors = ["Nina Těšková <nina.marie.teskova@gmail.com>"]
license = "MIT"
repository = "https://gitea.hnrglobal.com/HNR-Global/couchdb-file-sync"

[[bin]]
name = "couchdb-file-sync"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.51", features = ["full"] }
tokio-util = "0.7"

# CouchDB client
couch_rs = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
dialoguer = "0.12"

# Diff
similar = "3.0"

# Configuration
config = "0.15"

# File watching
notify-debouncer-full = "0.7"

# SQLite
rusqlite = { version = "0.39", features = ["bundled", "chrono", "serde_json"] }

# Hashing
sha2 = "0.11"
hex = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Pattern matching for ignore files
globset = "0.4"

# HTTP clients for notifications
reqwest = { version = "0.13.2", features = ["blocking", "json", "query", "rustls"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"
semver = "1.0"
flate2 = "1.0"
tar = "0.4"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
tempfile = "3.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# MIME type detection
mime_guess = "2.0"

# Path utilities
walkdir = "2.5"

# Environment variable expansion
envy = "0.4"
shellexpand = "3.1"
rand = "0.10.0"

[dev-dependencies]
tempfile = "3.26"
tokio-test = "0.4"

[package.metadata.release]
allow-branch = ["main", "master"]
sign-commit = false
sign-tag = false
push = true
tag = true
publish = false
tag-name = "v{{version}}"
tag-message = "release: v{{version}}"
pre-release-commit-message = "release: v{{version}}"

[[bin]]
name = "scanner-perf"
path = "src/bin/scanner_perf.rs"
